2009-08-07  Mike Fenton  <mike.fenton@torchmobile.com>

Reviewed by Eric Seidel.

        Prevent RenderThemeQt AdjustStyle based calls for TextField, MenuList and MenuListButton
        from discarding style colour.

        Add new tests and remove tests from platform/qt/Skipped that now pass.

        https://bugs.webkit.org/show_bug.cgi?id=28050

        * fast/forms/menulist-style-color.html: Added.
        * fast/forms/text-style-color.html: Added.
        * platform/qt/Skipped:
        * platform/qt/fast/forms/menulist-style-color-expected.txt: Added.
        * platform/qt/fast/forms/text-style-color-expected.txt: Added.

2009-08-07  Mike Fenton  <mike.fenton@torchmobile.com>

        Reviewed by Eric Seidel.

        Prevent RenderThemeQt AdjustStyle based calls for TextField, MenuList and MenuListButton
        from discarding style colour.

        Add tests and remove tests from platform/qt/Skipped that now pass.

        https://bugs.webkit.org/show_bug.cgi?id=28050

        Tests: fast/forms/menulist-style-color.html
               fast/forms/text-style-color.html

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::adjustTextFieldStyle):
        (WebCore::RenderThemeQt::adjustMenuListStyle):
        (WebCore::RenderThemeQt::adjustMenuListButtonStyle):

Canonical link: https://commits.webkit.org/38499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46896 268f45cc-cd09-0410-ab3c-d52691b4dbfc